[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/graphics/spritesheets/ButtonContainer.png" type="Texture" id=1]
[ext_resource path="res://assets/graphics/spritesheets/ButtonContainerPressed.png" type="Texture" id=2]
[ext_resource path="res://assets/graphics/spritesheets/ButtonContainerHover.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/Exo-Black.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scripts/interface/buttons_container.gd" type="Script" id=5]
[ext_resource path="res://assets/graphics/spritesheets/score.png" type="Texture" id=6]
[ext_resource path="res://scripts/interface/interface.gd" type="Script" id=7]
[ext_resource path="res://assets/graphics/spritesheets/armor.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 10
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("hurt_player:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.411765, 0.129412, 0.129412, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "hit"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("hurt_player:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.411765, 0.129412, 0.129412, 0 ), Color( 0.301961, 0.0745098, 0.0745098, 0.54902 ), Color( 0.411765, 0.129412, 0.129412, 0 ) ]
}

[node name="Interface" type="CanvasLayer" groups=["interface"]]
script = ExtResource( 7 )

[node name="buttons_container" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -30.0
margin_top = -40.0
margin_right = 30.0
margin_bottom = 40.0
script = ExtResource( 5 )

[node name="play_game" type="TextureButton" parent="buttons_container"]
margin_right = 60.0
margin_bottom = 32.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 3 )

[node name="play_game_text" type="Label" parent="buttons_container/play_game"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -11.5
margin_right = 20.0
margin_bottom = 11.5
custom_fonts/font = SubResource( 1 )
text = "Start"
align = 1
valign = 1

[node name="quit" type="TextureButton" parent="buttons_container"]
margin_top = 44.0
margin_right = 60.0
margin_bottom = 76.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 3 )

[node name="quit_text" type="Label" parent="buttons_container/quit"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -11.5
margin_right = 20.0
margin_bottom = 11.5
custom_fonts/font = SubResource( 1 )
text = "Quit"
align = 1
valign = 1

[node name="score_container" type="TextureRect" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 47.0
margin_bottom = 16.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 6 )

[node name="score_text" type="Label" parent="score_container"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 1.0
margin_right = -5.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 2
valign = 1

[node name="final_score" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.5
margin_top = -116.0
margin_right = 50.5
margin_bottom = -102.0
text = "Pontuação Final "

[node name="health" type="Sprite" parent="."]
position = Vector2( 305, 24 )
scale = Vector2( 2, 2 )
texture = ExtResource( 8 )
hframes = 5
frame = 4

[node name="hurt_player" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.411765, 0.129412, 0.129412, 0 )

[node name="animation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/hit = SubResource( 4 )

[connection signal="pressed" from="buttons_container/play_game" to="buttons_container" method="_on_play_game_pressed"]
[connection signal="pressed" from="buttons_container/quit" to="buttons_container" method="_on_quit_pressed"]
